force-app/main/default/objects/fferpcore__ExchangeRateHistory__c/fields/fferpcore__Group__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The group that the exchange rate entry relates to.</description>
    <label>Group</label>
    <referenceTo>fferpcore__ExchangeRateGroup__c</referenceTo>
    <relationshipLabel>Exchange Rate History</relationshipLabel>
    <relationshipName>ExchangeRateHistory</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>