force-app/main/default/objects/fferpcore__ExchangeRateHistory__c/fields/fferpcore__StartDate__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__StartDate__c</fullName>
    <description>The first date that the exchange rate is valid.</description>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>